Remove some @SuppressWarnings annotations and fix code